# damascus

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  pyproject.toml  requirements-dev.txt  sdkgen.py  setup.py  test.py  test_constants.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
damascus/: __init__.py  cli.py  cli_parser.py  client.py  exceptions.py
damascus/core/: __init__.py  generator.py  schema.py  sdkgen.py  template.py  types.py
damascus/templates/: client.py.j2  models.py.j2
docs/: cli.md  index.md
examples/: basic_usage.py  generate_sdk.py
templates/: client.py.j2
tests/: __init__.py  conftest.py  test_client.py  test_sdk_types.py  test_sdkgen.py
